about section created

--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
         </div>
     </header>
     <main>
-
+        <section class="about">
+            <h3 class="section-title">About Me</h3>
+            <p class="section-description">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+        </section>
     </main>
     <footer>
 
