--- a/index.html
+++ b/index.html
@@ -34,6 +34,25 @@
         <section class="about">
             <h3 class="section-title">About Me</h3>
             <p class="section-description">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+            <div class="about-info-container">
+                <div class="about-info">
+                    <h4 class="info-title">Name: </h4>
+                    <p class="info-description">Mary Hardy</p>
+                </div>
+                <div class="about-info">
+                    <h4 class="info-title">Email: </h4>
+                    <p class="info-description">info@gmail.com</p>
+                </div>
+                <div class="about-info">
+                    <h4 class="info-title">Date of Birth</h4>
+                    <p class="info-description">11 November 1998</p>
+                </div>
+                <div class="about-info">
+                    <h4 class="info-title">From</h4>
+                    <p class="info-description">Los Angels,USA</p>
+                </div>
+
+            </div>
         </section>
     </main>
     <footer>
